--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "prepublishOnly": "npm run build",
     "npm:update": "npm run clean:all && npx npm-check-updates --upgrade && npm install"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
+  },
   "peerDependencies": {
     "bootstrap": "^4.3.1"
   },
