--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "typescript": "3.4.1"
   },
   "peerDependencies": {
     "bootstrap": "^4.3.1"
